# CrudParaViernes

./: pyproject.toml
crud/: main.py
database/: db.py
models/: DBmodels.py  PydanticSchemas.py
