[tool.poetry]
name = "pruebaviernes"
version = "0.1.0"
description = ""
authors = ["Rodrigo Tapia <rodrigojtapia21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.98.0"}
pydantic = "^1.10.9"
sqlalchemy = "^2.0.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
